finished the game history functionality

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
+  font: 35px "Century Gothic", Futura, sans-serif;
   margin: 20px;
 }
 
@@ -18,18 +18,18 @@ ol, ul {
 }
 
 .square {
-  background: #fff;
+  background: #003366;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 80px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 100px;
+  height: 100px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 100px;
 }
 
 .square:focus {
@@ -37,7 +37,7 @@ ol, ul {
 }
 
 .kbd-navigation .square:focus {
-  background: #ddd;
+  background: #003366;
 }
 
 .game {
