--- a/src/index.css
+++ b/src/index.css
@@ -22,16 +22,16 @@ ol, ul {
   background: #003366;
   border: 1px solid #999;
   float: left;
-  font-size: 45px;
+  font-size: 75px;
   font-weight: bold;
-  line-height: 50px;
-  height: 50px;
+  line-height: 80px;
+  height: 80px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   position: static;
   text-align: center;
-  width: 50px;
+  width: 80px;
 }
 
 .square:focus {
@@ -45,9 +45,10 @@ ol, ul {
 .game {
   display: flex;
   flex-direction: row;
+  position: static;
 }
 
 .game-info {
   margin-left: 20px;
-  position: static;
+  position: relative;
 }
