--- a/src/index.css
+++ b/src/index.css
@@ -117,9 +117,11 @@ ol, ul {
   border: 1px solid #999;
   padding: 0.5rem;
   text-align: center;
+  font-size: 20px;
 }
 
 .leaderboard h2 {
   margin: 0;
   margin-bottom: 0.5rem;
+  font-size: 20px;
 }
