--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ ol, ul {
 
 .game-info {
   margin-right: 40px;
+  flex: 1;
 }
 
 .game {
@@ -81,7 +82,7 @@ ol, ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 100%;
   padding: 40px 0;
 }
 
