--- a/src/index.css
+++ b/src/index.css
@@ -69,12 +69,13 @@ ol, ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .game-info {
   margin-right: 40px;
   flex: 1;
+  background-color: #color1;
 }
 
 .game {
@@ -82,8 +83,8 @@ ol, ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
   padding: 40px 0;
+  background-color: #color2;
 }
 
 .move-btn {
@@ -110,6 +111,7 @@ ol, ul {
 
 .leaderboard {
   margin-left: 40px;
+  background-color: #color3;
 }
 
 .leaderboard table {
@@ -132,8 +134,6 @@ ol, ul {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   padding: 10px 0;
   text-align: center;
